# mitek_bot

./: README.md  bot.py  insert_pharses.py  phrases.csv  phrases_list_2.json  pyproject.toml  start_bot.sh
