[tool.poetry]
name = "mitgptbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["webhooks"], version = "^21.4"}
schedule = "^1.2.2"
python-dotenv = "^1.0.1"
motor = "^3.5.1"
dnspython = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
